--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="my_header">
   <div class="logo">
     <img
-      src="logo.jpg"
+      src="img/logo.jpg"
       alt="My Logo"
       height="100px"
       width="100px"
@@ -16,19 +16,19 @@
   <nav class="my_nav">
     <ul class="nav__list">
       <li class="nav__item">
-        <a class="nav__link" routerLink="home" routerLinkActive="active"
-          >Home</a
-        >
+        <a class="nav__link" routerLink="home" routerLinkActive="active">{{
+          "header.home" | translate
+        }}</a>
       </li>
       <li class="nav__item">
-        <a routerLink="about" routerLinkActive="active" class="nav__link"
-          >About</a
-        >
+        <a routerLink="about" routerLinkActive="active" class="nav__link">{{
+          "header.about" | translate
+        }}</a>
       </li>
       <li class="nav__item">
-        <a routerLink="proj" routerLinkActive="active" class="nav__link"
-          >Projects</a
-        >
+        <a routerLink="proj" routerLinkActive="active" class="nav__link">{{
+          "header.projects" | translate
+        }}</a>
       </li>
       <!-- <li class="nav__item">
           <a [routerLink]="'contact'" routerLinkActive="active" class="nav__link"
@@ -36,10 +36,12 @@
           >
         </li> -->
       <li class="nav__item">
-        <a routerLink="more" routerLinkActive="active" class="nav__link"
-          >More</a
-        >
+        <a routerLink="more" routerLinkActive="active" class="nav__link">{{
+          "header.more" | translate
+        }}</a>
       </li>
     </ul>
   </nav>
+
+  <app-lang-toggle></app-lang-toggle>
 </div>
