working with styless.scss and fonts

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,13 @@
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+///                                                SCSS RESET                                              ///
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v5.0.2 | 20191019
    License: none (public domain)
@@ -134,3 +144,83 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+///                                                SCSS RESET                                              ///
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+@font-face {
+  font-family: "cardTitle";
+  src: url("../public/fonts/bpg-nino-mtavruli-webfont.ttf");
+}
+
+@font-face {
+  font-family: "cardText";
+  src: url("../public/fonts/bpg-irubaqidze-webfont.ttf");
+}
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+///                                           GLOBAL VARIABLES                                            ///
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+:root {
+  --ff-primery: "cardTitle", sans-serif;
+  --ff-primery: "cardText", sans-serif;
+
+  --fw-reg: 300;
+  --fw-bold: 900;
+
+  --clr-light: #fff;
+  --clr-dark: #303030;
+  --clr-accent: #16e0bd;
+
+  --fs-h1: 3rem;
+  --fs-h2: 2.25rem;
+  --fs-h3: 1.25rem;
+  --fs-body: 1rem;
+}
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+///                                           GLOBAL VARIABLES                                            ///
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+/***********************************************************************************************************/
+/***********************************************************************************************************/
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+///                                            CUSTOM CLASSIES                                             ///
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+body {
+  font-family: var(--ff-primery);
+  font-size: var(--fs-body);
+}
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+///                                            CUSTOM CLASSIES                                             ///
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+///                                              MEDIA BREAKS                                              ///
+
+@media (min-width: 800px) {
+  :root {
+    --fs-h1: 4.5rem;
+    --fs-h2: 3.75rem;
+    --fs-h3: 1.5rem;
+    --fs-body: 1.125rem;
+  }
+}
+
+///                                              MEDIA BREAKS                                              ///
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
