working on markup

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,18 @@
-<p>footer works!</p>
+<footer>
+  <a href="" class="footer__link">Manuchar</a>
+
+  <ul class="sotial-list">
+    <li class="sotial-list__item">
+      <a href="" class="sotial-list__link">a</a>
+    </li>
+    <li class="sotial-list__item">
+      <a href="" class="sotial-list__link">b</a>
+    </li>
+    <li class="sotial-list__item">
+      <a href="" class="sotial-list__link">c</a>
+    </li>
+    <li class="sotial-list__item">
+      <a href="" class="sotial-list__link">d</a>
+    </li>
+  </ul>
+</footer>
