--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -1,1 +1,78 @@
-<p>home works!</p>
+<section class="intro" id="home">
+  <h1 class="section__title section__title--intro">
+    Hi, We Are <strong>WebKey</strong>
+  </h1>
+  <p class="section__subtitle section__subtitle--intro">FullStack DEV</p>
+  <img src="img/logo.jpg" alt="picture" style="max-width: 600px" />
+</section>
+
+<section class="my-services" id="services">
+  <h2 class="section__title section_title--services">What we do</h2>
+
+  <div class="services">
+    <div class="service">
+      <h3>FrontEnd Dev</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
+        facilis minima exercitationem labore sapiente iusto, quam .
+      </p>
+    </div>
+    <div class="service">
+      <h3>Backend Dev</h3>
+      <p>
+        Lorem, oluptas at. Mollitia officia sed dignissimos veritatis alias
+        similique reiciendis nisi?
+      </p>
+    </div>
+    <div class="service">
+      <h3>FullStack DEV</h3>
+      <p>
+        Odit repellat ratione velit tempora numquam cumque dignissimos, laborum
+        dolor?
+      </p>
+    </div>
+  </div>
+
+  <a href="work" class="btn">My Work</a>
+</section>
+
+<section class="about-me" id="about">
+  <h2 class="section__title section__title--intro">Who we are</h2>
+  <p class="section__title section__title--intro">
+    Lorem ipsum dolor, animi, officia aliquam dicta maiores expedita similique
+    tenetur explicabo provident! Velit sit doloribus nemo vel!
+  </p>
+  <div class="about-me__body">
+    <p></p>
+    <p></p>
+  </div>
+
+  <img src="img/logo.jpg" alt="" />
+</section>
+
+<section class="my-work" id="work">
+  <h2 class="section__title">My Work</h2>
+  <p class="section__subtitle"></p>
+
+  <div class="portfolio">
+    <a href="" class="portfolio__itme">
+      <img src="img/logo.jpg" alt="" class="portfolio__img" />
+    </a>
+
+    <a href="" class="portfolio__itme">
+      <img src="img/logo.jpg" alt="" class="portfolio__img" />
+    </a>
+
+    <a href="" class="portfolio__itme">
+      <img src="img/logo.jpg" alt="" class="portfolio__img" />
+    </a>
+
+    <a href="" class="portfolio__itme">
+      <img src="img/logo.jpg" alt="" class="portfolio__img" />
+    </a>
+
+    <a href="" class="portfolio__itme">
+      <img src="img/logo.jpg" alt="" class="portfolio__img" />
+    </a>
+  </div>
+</section>
