--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,9 +20,6 @@ span,
 applet,
 object,
 iframe,
-h1,
-h2,
-h3,
 h4,
 h5,
 h6,
@@ -121,9 +118,6 @@ section {
 *[hidden] {
   display: none;
 }
-body {
-  line-height: 1;
-}
 menu,
 ol,
 ul {
@@ -167,7 +161,7 @@ table {
 
 :root {
   --ff-primery: "cardTitle", sans-serif;
-  --ff-primery: "cardText", sans-serif;
+  --ff-secondary: "cardText", sans-serif;
 
   --fw-reg: 300;
   --fw-bold: 900;
@@ -180,6 +174,9 @@ table {
   --fs-h2: 2.25rem;
   --fs-h3: 1.25rem;
   --fs-body: 1rem;
+
+  --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25),
+    0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
 }
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -198,8 +195,113 @@ table {
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 body {
+  margin: 0;
+  background-color: var(--clr-light);
+  color: var(--clr-dark);
   font-family: var(--ff-primery);
   font-size: var(--fs-body);
+  line-height: 1.6;
+}
+
+section {
+  padding: 5em, 2em;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+h1,
+h2,
+h3 {
+  line-height: 1;
+  margin: 0;
+}
+
+h1 {
+  font-size: var(--fs-h1);
+}
+
+h2 {
+  font-size: var(--fs-h2);
+}
+
+h3 {
+  font-size: var(--fs-h3);
+}
+
+strong {
+  font-weight: var(--fw-bold);
+}
+
+.section__title {
+  margin-bottom: 0.25rem;
+}
+
+.section__title--intro {
+  font-weight: var(--fw-reg);
+}
+
+.section__title--intro strong {
+  display: block;
+}
+
+.section__subtitle {
+  margin: 0;
+  font-size: var(--fs-h3);
+}
+
+.section__subtitle--intro,
+.section__subtitle--about {
+  background: var(--clr-accent);
+  padding: 0.25em 1em;
+  font-family: var(--ff-secondary);
+  margin-bottom: 1em;
+}
+
+/*  Home Page  */
+
+.intro {
+  position: relative;
+}
+
+.intro__img {
+  box-shadow: var(--bs);
+}
+
+.section__subtitle--intro {
+  display: inline-block;
+}
+
+@media (min-width: 600px) {
+  .intro {
+    display: grid;
+    width: min-content;
+    margin: 0 auto;
+    grid-column-gap: 1em;
+    grid-template-areas:
+      "img title"
+      "img subtitle";
+    grid-template-columns: min-content max-content;
+  }
+
+  .intro__img {
+    grid-area: img;
+    min-width: 25opx;
+    position: relative;
+    z-index: 2;
+  }
+
+  .section__subtitle--intro {
+    align-self: self-start;
+    grid-column: -1 / 1;
+    grid-row: 2;
+    text-align: right;
+    position: relative;
+    left: -1.5em;
+    width: calc(100% + 1.5em);
+  }
 }
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -207,6 +309,9 @@ body {
 ///                                            CUSTOM CLASSIES                                             ///
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+/***********************************************************************************************************/
+/***********************************************************************************************************/
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
