working on Home page styling

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -3,7 +3,7 @@
     Hi, We Are <strong>WebKey</strong>
   </h1>
   <p class="section__subtitle section__subtitle--intro">FullStack DEV</p>
-  <img src="img/logo.jpg" alt="picture" style="max-width: 600px" />
+  <img src="img/logo.jpg" alt="picture" class="intro__img" />
 </section>
 
 <section class="my-services" id="services">
