--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -13,22 +13,29 @@
     <div class="service">
       <h3>FrontEnd Dev</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
-        facilis minima exercitationem labore sapiente iusto, quam .
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo sed
+        officia harum maxime quas eius cum labore, unde corrupti sit voluptatem
+        est ratione ab soluta repellendus facere dicta assumenda? Dignissimos!
       </p>
     </div>
     <div class="service">
       <h3>Backend Dev</h3>
       <p>
         Lorem, oluptas at. Mollitia officia sed dignissimos veritatis alias
-        similique reiciendis nisi?
+        similique reiciendis nisi? Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Perferendis dolorem earum ipsa aliquid error, cum qui.
+        Laborum incidunt recusandae reprehenderit mollitia nesciunt accusantium,
+        placeat quos vitae quasi non, nostrum rerum.
       </p>
     </div>
     <div class="service">
       <h3>FullStack DEV</h3>
       <p>
         Odit repellat ratione velit tempora numquam cumque dignissimos, laborum
-        dolor?
+        dolor? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
+        minima omnis suscipit recusandae perspiciatis magnam, provident labore!
+        Dolor vel aspernatur possimus, rem modi quaerat optio officia
+        reiciendis, voluptatum similique praesentium.
       </p>
     </div>
   </div>
@@ -37,42 +44,51 @@
 </section>
 
 <section class="about-me" id="about">
-  <h2 class="section__title section__title--intro">Who we are</h2>
-  <p class="section__title section__title--intro">
+  <h2 class="section__title section__title--about">Who we are</h2>
+  <p class="section__subtitle section__subtitle--about">
     Lorem ipsum dolor, animi, officia aliquam dicta maiores expedita similique
     tenetur explicabo provident! Velit sit doloribus nemo vel!
   </p>
   <div class="about-me__body">
-    <p></p>
-    <p></p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia in
+      exercitationem culpa placeat laborum, soluta numquam dignissimos aut
+      consequuntur ad, incidunt cupiditate labore qui, ex sed. Veritatis
+      aspernatur ipsa dolorem?
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur,
+      nesciunt at? Sunt aspernatur, explicabo deleniti ipsam a quia in labore
+      eos, eum quas dolor molestiae. Veritatis error incidunt placeat rerum.
+    </p>
   </div>
 
-  <img src="img/logo.jpg" alt="" />
+  <img src="img/backgrounds/main1.jpg" alt="" class="about-me__img" />
 </section>
 
 <section class="my-work" id="work">
-  <h2 class="section__title">My Work</h2>
-  <p class="section__subtitle"></p>
+  <h2 class="section__title section__title--work">My Work</h2>
+  <p class="section__subtitle section__subtitle--work">my work range</p>
 
   <div class="portfolio">
-    <a href="" class="portfolio__itme">
-      <img src="img/logo.jpg" alt="" class="portfolio__img" />
+    <a href="" class="portfolio__item">
+      <img src="img/backgrounds/main2.jpg" alt="" class="portfolio__img" />
     </a>
 
-    <a href="" class="portfolio__itme">
-      <img src="img/logo.jpg" alt="" class="portfolio__img" />
+    <a href="" class="portfolio__item">
+      <img src="img/backgrounds/main3.jpg" alt="" class="portfolio__img" />
     </a>
 
-    <a href="" class="portfolio__itme">
-      <img src="img/logo.jpg" alt="" class="portfolio__img" />
+    <a href="" class="portfolio__item">
+      <img src="img/backgrounds/main4.jpg" alt="" class="portfolio__img" />
     </a>
 
-    <a href="" class="portfolio__itme">
-      <img src="img/logo.jpg" alt="" class="portfolio__img" />
+    <a href="" class="portfolio__item">
+      <img src="img/backgrounds/main5.jpg" alt="" class="portfolio__img" />
     </a>
 
-    <a href="" class="portfolio__itme">
-      <img src="img/logo.jpg" alt="" class="portfolio__img" />
+    <a href="" class="portfolio__item">
+      <img src="img/backgrounds/main6.jpg" alt="" class="portfolio__img" />
     </a>
   </div>
 </section>
