--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,17 +81,16 @@ img {
   max-width: 100%;
 }
 
-p {
-  width: 100%;
-  text-align: center;
-}
+// p {
+//   width: 100%;
+//   text-align: center;
+// }
 
 h1,
 h2,
 h3 {
-  text-align: center;
   line-height: 1;
-  margin: 0;
+  margin: 10px 0;
 }
 
 h1 {
@@ -118,6 +117,33 @@ strong {
   margin: 0;
   font-size: var(--fs-h3);
 }
+
+:focus {
+  outline: 3px solid var(--clr-accent);
+  outline-offset: 3px;
+}
+
+/* BUTTONS */
+
+.btn {
+  display: inline-block;
+  padding: 0.5em 2.5em;
+  background: var(--clr-accent);
+  color: var(--clr-dark);
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: var(--fw-bold);
+  transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+  transform: scale(1.1);
+}
+
+/* BUTTONS */
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
