--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,18 +1,18 @@
-<footer>
+<footer class="footer">
   <a href="" class="footer__link">Manuchar</a>
 
-  <ul class="sotial-list">
-    <li class="sotial-list__item">
-      <a href="" class="sotial-list__link">a</a>
+  <ul class="social-list">
+    <li class="social-list__item">
+      <a href="" class="social-list__link"><i class="fab fa-facebook"></i></a>
     </li>
-    <li class="sotial-list__item">
-      <a href="" class="sotial-list__link">b</a>
+    <li class="social-list__item">
+      <a href="" class="social-list__link"><i class="fab fa-youtube"></i></a>
     </li>
-    <li class="sotial-list__item">
-      <a href="" class="sotial-list__link">c</a>
+    <li class="social-list__item">
+      <a href="" class="social-list__link"><i class="fab fa-github"></i></a>
     </li>
-    <li class="sotial-list__item">
-      <a href="" class="sotial-list__link">d</a>
+    <li class="social-list__item">
+      <a href="" class="social-list__link"><i class="fab fa-instagram"></i></a>
     </li>
   </ul>
 </footer>
