--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="my_header">
+<header class="my_header">
   <div class="logo">
     <img
       src="img/logo.jpg"
@@ -43,5 +43,5 @@
     </ul>
   </nav>
 
-  <app-lang-toggle></app-lang-toggle>
-</div>
+  <!-- <app-lang-toggle></app-lang-toggle> -->
+</header>
