--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -40,7 +40,7 @@
     </div>
   </div>
 
-  <a href="work" class="btn">My Work</a>
+  <a routerLink="/proj" class="btn">My Work</a>
 </section>
 
 <section class="about-me" id="about">
