--- a/src/app/modules/projects/components/projects/projects.component.html
+++ b/src/app/modules/projects/components/projects/projects.component.html
@@ -1,1 +1,7 @@
-<p>projects works!</p>
+<section class="intro" id="home">
+  <h1 class="section__title section__title--intro">
+    Title <strong>Of My Project</strong>
+  </h1>
+  <p class="section__subtitle section__subtitle--intro">FullStack DEV</p>
+  <img src="img/logo.jpg" alt="picture" class="intro__img" />
+</section>
