intro moved to component

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -1,10 +1,17 @@
-<section class="intro" id="home">
+<!-- <section class="intro" id="home">
   <h1 class="section__title section__title--intro">
     {{ "home.hi" | translate }} <strong>{{ "home.wk" | translate }}</strong>
   </h1>
   <p class="section__subtitle section__subtitle--intro">FullStack DEV</p>
   <img src="img/logo.jpg" alt="picture" class="intro__img" />
-</section>
+</section> -->
+
+<app-intro
+  [title1Inp]="'home.hi'"
+  [title2Inp]="'home.wk'"
+  [srcInp]="'img/logo.jpg'"
+  [subTitleInp]="'FullStack DEV'"
+></app-intro>
 
 <app-lang-toggle></app-lang-toggle>
 
