--- a/src/app/modules/projects/components/projects/projects.component.html
+++ b/src/app/modules/projects/components/projects/projects.component.html
@@ -1,7 +1,23 @@
-<section class="intro" id="home">
-  <h1 class="section__title section__title--intro">
-    Title <strong>Of My Project</strong>
-  </h1>
-  <p class="section__subtitle section__subtitle--intro">FullStack DEV</p>
-  <img src="img/logo.jpg" alt="picture" class="intro__img" />
-</section>
+<app-intro
+  [title1Inp]="'Title'"
+  [title2Inp]="'Of My Project'"
+  [srcInp]="'img/backgrounds/main6.jpg'"
+  [subTitleInp]="'FullStack DEV'"
+></app-intro>
+
+<div class="item">
+  <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium
+    quisquam dolorum sint incidunt, atque enim illum repellendus.
+  </p>
+  <img src="img/backgrounds/main3.jpg" alt="" />
+  <p>
+    Deserunt blanditiis reiciendis, natus laboriosam dolores nostrum voluptatum
+    minima quos dignissimos rem sit mollitia.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum sed voluptate
+    consequatur, maiores at porro nisi. At libero, suscipit odit eius non
+    tenetur consequatur a, facere molestiae magnam, dolore consectetur?
+  </p>
+</div>
