implemented header component for big screens

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <a href="" class="footer__link">{{ "home.wk" | translate }}</a>
+  <a href="home" class="footer__link">{{ "home.wk" | translate }}</a>
 
   <ul class="social-list">
     <li class="social-list__item">
