--- a/src/app/modules/projects/components/projects/projects.component.html
+++ b/src/app/modules/projects/components/projects/projects.component.html
@@ -1,8 +1,8 @@
 <app-intro
-  [title1Inp]="'Title'"
-  [title2Inp]="'Of My Project'"
-  [srcInp]="'img/backgrounds/main6.jpg'"
-  [subTitleInp]="'FullStack DEV'"
+  [title1Inp]="title1"
+  [title2Inp]="title2"
+  [srcInp]="src"
+  [subTitleInp]="subTitel"
 ></app-intro>
 
 <div class="item">
