--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,6 @@
 <header class="my_header" [ngClass]="{ 'nav-open': !isHiden }">
   <div class="logo">
-    <img
-      src="img/logo.jpg"
-      alt="My Logo"
-      height="100px"
-      width="100px"
-      routerLink="home"
-    />
+    <img src="img/logo.jpg" alt="My Logo" width="100px" routerLink="home" />
   </div>
 
   <button class="nav-toggle" aria-label="toggle navigation" (click)="toggle()">
