--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,4 +1,5 @@
 header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   padding: 0.5em;
@@ -7,6 +8,9 @@ header {
 
 .logo {
   max-width: 100px;
+  min-width: 60px;
+  border-radius: 1rem;
+  overflow: hidden;
 }
 
 .my_nav {
@@ -52,7 +56,8 @@ header {
   cursor: pointer;
   position: absolute;
   right: 1em;
-  top: 46px;
+  top: 50%;
+  transform: translate(0, -50%);
   z-index: 1000;
 }
 
@@ -109,7 +114,10 @@ header {
 }
 
 .language {
-  margin: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: calc(50% - 4.5em);
 }
 
 @media (min-width: 700px) {
@@ -124,9 +132,9 @@ header {
     background-color: transparent;
   }
 
-  // .nav__item {
-  //   margin-left: 1rem;
-  // }
+  .language {
+    margin: auto;
+  }
 
   .my_nav {
     width: 100%;
