--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -56,8 +56,7 @@ header {
   cursor: pointer;
   position: absolute;
   right: 1em;
-  top: 50%;
-  transform: translate(0, -50%);
+  top: 3em;
   z-index: 1000;
 }
 
@@ -147,7 +146,7 @@ header {
   }
 
   .nav__link {
-    font-size: 1.5rem;
+    font-size: var(--fs-h3);
     color: var(--clr-dark);
 
     padding: 0.1em;
