implemented circuite animation for footer

--- a/src/app/components/circleanimation/circleanimation.component.html
+++ b/src/app/components/circleanimation/circleanimation.component.html
@@ -1,15 +1,15 @@
 <div class="circle">
   <div class="social">
     <a href="#" title="YouTube">
-      <i class="bi bi-youtube"></i>
+      <i class="fab fa-youtube"></i>
     </a>
 
-    <a href="#" title="Twitter">
-      <i class="bi bi-twitter-x"></i>
+    <a href="#" title="Facebook">
+      <i class="fab fa-facebook"></i>
     </a>
 
     <a href="#" title="Instagram">
-      <i class="bi bi-instagram"></i>
+      <i class="fab fa-instagram"></i>
     </a>
   </div>
 </div>
