--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,18 +1,7 @@
 <footer class="footer">
   <a href="home" class="footer__link">{{ "home.wk" | translate }}</a>
 
-  <ul class="social-list">
-    <li class="social-list__item">
-      <a href="" class="social-list__link"><i class="fab fa-facebook"></i></a>
-    </li>
-    <li class="social-list__item">
-      <a href="" class="social-list__link"><i class="fab fa-youtube"></i></a>
-    </li>
-    <li class="social-list__item">
-      <a href="" class="social-list__link"><i class="fab fa-github"></i></a>
-    </li>
-    <li class="social-list__item">
-      <a href="" class="social-list__link"><i class="fab fa-instagram"></i></a>
-    </li>
-  </ul>
+  <div class="animation">
+    <app-circleanimation></app-circleanimation>
+  </div>
 </footer>
