working on datepicker component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -149,6 +149,13 @@ html {
 
 /* BUTTONS */
 
+.flex-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 ///                                            CUSTOM CLASSIES                                             ///
