--- a/src/app/modules/date-piker-ge/components/date-picker-ge/date-picker-ge.component.scss
+++ b/src/app/modules/date-piker-ge/components/date-picker-ge/date-picker-ge.component.scss
@@ -5,7 +5,7 @@
   padding: 1rem;
 
   width: 300px;
-  height: 300px;
+  height: auto;
 
   border: 1px solid black;
 }
@@ -15,8 +15,8 @@ input {
 
   padding: 0.3rem;
 
-  background-color: rgb(234, 234, 234);
-  opacity: 0.7;
+  background-color: rgb(202, 197, 197);
+  opacity: 0.8;
 
   border: 1px solid black;
   border-radius: 10px;
@@ -40,12 +40,21 @@ input:focus {
   top: 40px;
   left: 0;
 
-  width: 100%;
-  height: 100px;
+  width: 120%;
 
-  border: 1px solid black;
+  border-radius: 1rem;
 
-  // transform: scale(1, 0);
+  background-color: rgb(202, 197, 197);
+}
+
+.calendar-folded {
+  transform: scale(1, 0);
+  transition: transform 300ms ease-out;
+}
+
+.calendar-expanded {
+  transform: scale(1, 1);
+  transition: transform 300ms ease-out;
 
   z-index: 999;
 }
@@ -59,7 +68,19 @@ input:focus {
   width: 30px;
   height: 30px;
 
-  background-color: aqua;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 50%;
 
   z-index: 999;
+}
+
+.toggle svg {
+  opacity: 0.7;
+}
+
+.toggle:hover {
+  background-color: white;
 }
