--- a/src/app/modules/date-piker-ge/components/calendar/calendar.component.scss
+++ b/src/app/modules/date-piker-ge/components/calendar/calendar.component.scss
@@ -12,6 +12,18 @@
   justify-content: space-between;
 }
 
+.line-1__right {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+
+.year-back:hover,
+.year-forward:hover {
+  cursor: pointer;
+  background-color: white;
+}
+
 .dayNames {
   width: 100%;
   display: flex;
@@ -49,6 +61,10 @@
 
 .mDay {
   line-height: 1.5;
+}
+
+.cleanCell {
+  color: transparent;
 }
 
 .mDay:hover {
