--- a/src/app/modules/date-piker-ge/components/date-picker-ge/date-picker-ge.component.scss
+++ b/src/app/modules/date-piker-ge/components/date-picker-ge/date-picker-ge.component.scss
@@ -1,10 +1,12 @@
 .picker {
   display: flex;
 
+  justify-content: center;
+
   margin: 1rem auto;
   padding: 1rem;
 
-  width: 300px;
+  width: 250px;
   height: auto;
 
   border: 1px solid black;
@@ -38,9 +40,9 @@ input:focus {
   position: absolute;
 
   top: 40px;
-  left: 0;
+  left: -20%;
 
-  width: 120%;
+  width: 140%;
 
   border-radius: 1rem;
 
@@ -49,12 +51,12 @@ input:focus {
 
 .calendar-folded {
   transform: scale(1, 0);
-  transition: transform 300ms ease-out;
+  transition: transform 300ms ease-in-out;
 }
 
 .calendar-expanded {
   transform: scale(1, 1);
-  transition: transform 300ms ease-out;
+  transition: transform 300ms ease-in-out;
 
   z-index: 999;
 }
