--- a/src/app/modules/date-piker-ge/components/calendar/calendar.component.scss
+++ b/src/app/modules/date-piker-ge/components/calendar/calendar.component.scss
@@ -1,4 +1,6 @@
 .flex-wrapper {
+  position: relative;
+
   flex-direction: column;
 
   gap: 0.5rem;
@@ -16,6 +18,74 @@
   display: flex;
   flex-direction: row;
   gap: 5px;
+}
+
+.btn {
+  background-color: white;
+  border-radius: 1rem;
+  font-size: 1rem;
+  padding: 0.3em 0.5em;
+}
+
+.year-pad,
+.month-pad {
+  position: absolute;
+
+  width: calc(100% - 1rem);
+
+  background-color: white;
+
+  z-index: 9999;
+}
+
+.year-pad {
+  top: 14.5%;
+  left: 0.5rem;
+}
+
+.month-pad {
+  top: 28%;
+  left: 0.5rem;
+}
+
+.year-grid {
+  display: grid;
+
+  gap: 2px;
+
+  grid-template-areas:
+    ". . . ."
+    ". . . ."
+    ". . . ."
+    ". . . ."
+    ". . . .";
+}
+
+.month-grid {
+  display: grid;
+
+  gap: 2px;
+
+  grid-template-areas:
+    ". . ."
+    ". . ."
+    ". . ."
+    ". . .";
+}
+
+.year-grid__year,
+.year-grid__month {
+  padding: 0.4em 0.2em;
+  background-color: rgb(202, 197, 197);
+}
+
+.year-grid__year:hover,
+.year-grid__month:hover {
+  cursor: pointer;
+  border-radius: 1rem;
+  outline: 1px solid red;
+  outline-offset: -0.2em;
+  font-weight: var(--fw-bold);
 }
 
 .year-back:hover,
