--- a/src/app/modules/date-piker-ge/components/calendar/calendar.component.scss
+++ b/src/app/modules/date-piker-ge/components/calendar/calendar.component.scss
@@ -27,13 +27,16 @@
   padding: 0.3em 0.5em;
 }
 
-.year-pad,
-.month-pad {
+.pad {
   position: absolute;
 
   width: calc(100% - 1rem);
 
   background-color: white;
+
+  border: 3px solid black;
+
+  border-radius: 1rem;
 
   z-index: 9999;
 }
@@ -41,11 +44,14 @@
 .year-pad {
   top: 14.5%;
   left: 0.5rem;
+
+  height: calc(85.5% - 0.5em);
 }
 
 .month-pad {
-  top: 28%;
+  top: 29%;
   left: 0.5rem;
+  height: calc(71% - 0.5em);
 }
 
 .year-grid {
@@ -59,6 +65,9 @@
     ". . . ."
     ". . . ."
     ". . . .";
+
+  padding: 0.3em;
+  height: 100%;
 }
 
 .month-grid {
@@ -71,6 +80,9 @@
     ". . ."
     ". . ."
     ". . .";
+
+  padding: 0.3em;
+  height: 100%;
 }
 
 .year-grid__year,
@@ -110,6 +122,7 @@
 .monthDays {
   isolation: isolate;
   width: 100%;
+  height: 180px;
   display: grid;
   gap: 3px;
   grid-template-columns: repeat(7, 1fr);
