--- a/src/app/modules/date-piker-ge/components/calendar/calendar.component.html
+++ b/src/app/modules/date-piker-ge/components/calendar/calendar.component.html
@@ -1,30 +1,32 @@
 <div class="flex-wrapper">
-  <div *ngIf="showYearPad" class="pad year-pad">
-    <div class="year-grid">
-      @for (yr of yearsSignal(); track $index) {
-      <div class="year-grid__year" (click)="setYear(yr); showYearPad = false">
-        {{ yr }}
+  <div class="pads">
+    <div *ngIf="showYearPad" class="pad year-pad">
+      <div class="year-grid">
+        @for (yr of yearsSignal(); track $index) {
+        <div class="year-grid__year" (click)="setYear(yr); showYearPad = false">
+          {{ yr }}
+        </div>
+        }
       </div>
-      }
     </div>
-  </div>
-  <div *ngIf="showMonthPad" class="pad month-pad">
-    <div class="month-grid">
-      @for (mn of monthies; let idx = $index; track $index) {
-      <div
-        class="year-grid__month"
-        (click)="setMonth(idx + 1); showMonthPad = false"
-      >
-        {{ mn.slice(0, 3) }}
+    <div *ngIf="showMonthPad" class="pad month-pad">
+      <div class="month-grid">
+        @for (mn of monthies; let idx = $index; track $index) {
+        <div
+          class="month-grid__month"
+          (click)="setMonth(idx + 1); showMonthPad = false"
+        >
+          {{ mn.slice(0, 3) }}
+        </div>
+        }
       </div>
-      }
     </div>
   </div>
 
   <div class="flex-wrapper line line-1">
     <div class="line-1__left">
-      <div class="btn" (click)="showHideYearPad(dateInGeorgian().year)">
-        {{ dateInGeorgian().year }}
+      <div class="btn" (click)="showHideYearPad(dateFromService().year)">
+        {{ dateFromService().year }}
       </div>
 
       <!-- <select
@@ -47,7 +49,7 @@
   </div>
   <div class="flex-wrapper line line-2">
     <div class="btn" (click)="showHideMonthPad()">
-      {{ monthies[dateInGeorgian().month - 1] }}
+      {{ monthies[dateFromService().month - 1] }}
     </div>
     <!-- <select
       name="month"
@@ -80,7 +82,7 @@
         (click)="setDay(day)"
         [ngClass]="{
           mDay: day != 0,
-          selectedDay: day == dateInGeorgian().day
+          selectedDay: day == dateFromService().day
         }"
       >
         {{ day == 0 ? "" : day }}
