--- a/src/app/modules/date-piker-ge/components/calendar/calendar.component.scss
+++ b/src/app/modules/date-piker-ge/components/calendar/calendar.component.scss
@@ -34,7 +34,7 @@
 
   background-color: white;
 
-  border: 3px solid black;
+  // border: 1px solid red;
 
   border-radius: 1rem;
 
@@ -42,14 +42,14 @@
 }
 
 .year-pad {
-  top: 14.5%;
+  top: 14%;
   left: 0.5rem;
 
   height: calc(85.5% - 0.5em);
 }
 
 .month-pad {
-  top: 29%;
+  top: 26%;
   left: 0.5rem;
   height: calc(71% - 0.5em);
 }
@@ -86,18 +86,26 @@
 }
 
 .year-grid__year,
-.year-grid__month {
-  padding: 0.4em 0.2em;
+.month-grid__month {
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+
+  // padding: 0.4em 0.2em;
   background-color: rgb(202, 197, 197);
+  border-radius: 0.4rem;
 }
 
 .year-grid__year:hover,
-.year-grid__month:hover {
+.month-grid__month:hover {
   cursor: pointer;
-  border-radius: 1rem;
-  outline: 1px solid red;
-  outline-offset: -0.2em;
+
+  background-color: white;
+
   font-weight: var(--fw-bold);
+
+  scale: 1.4;
 }
 
 .year-back:hover,
@@ -121,19 +129,26 @@
 
 .monthDays {
   isolation: isolate;
+
+  display: flex;
   width: 100%;
-  height: 180px;
+  height: 250px;
+
+  border-radius: 1rem;
+
   display: grid;
   gap: 3px;
   grid-template-columns: repeat(7, 1fr);
-  grid-template-areas:
-    ". . . . . . ."
-    ". . . . . . ."
-    ". . . . . . ."
-    ". . . . . . ."
-    ". . . . . . ."
-    ". . . . . . ."
-    ". . . . . . .";
+  // grid-template-areas:
+  //   ". . . . . . ."
+  //   ". . . . . . ."
+  //   ". . . . . . ."
+  //   ". . . . . . ."
+  //   ". . . . . . ."
+  //   ". . . . . . .";
+
+  align-items: center;
+  justify-content: center;
 }
 
 .selectedDay {
@@ -142,16 +157,15 @@
   outline: 1px solid red;
 }
 
-.mDay {
-  line-height: 1.5;
-}
-
-.cleanCell {
-  color: transparent;
-}
+// .cleanCell {
+//   color: transparent;
+// }
 
 .mDay:hover {
   cursor: pointer;
   border-radius: 50%;
   background-color: white;
+
+  scale: 1.5;
+  font-weight: var(--fw-bold);
 }
