--- a/src/app/modules/date-piker-ge/components/date-picker-ge/date-picker-ge.component.html
+++ b/src/app/modules/date-piker-ge/components/date-picker-ge/date-picker-ge.component.html
@@ -1,13 +1,41 @@
 <div class="picker">
   <div class="input">
-    <input
-      [(ngModel)]="date"
-      type="text"
-      id="dateInp"
-      placeholder="დდ/თთ/წწწწ"
-      appGeorgianDateInput
-      (ngModelChange)="setDate($event)"
-    />
+    <div class="date-string">
+      <input
+        [(ngModel)]="dateInput.day"
+        type="text"
+        class="cell day"
+        (focus)="selectAll($event)"
+        (click)="selectAll($event)"
+        (blur)="validateDay(dayInput); updateDate('day')"
+        pattern="^([1-9]|[12][0-9]|3[01])$"
+        maxlength="2"
+        required
+        #dayInput="ngModel"
+      />
+
+      <div *ngIf="dayInput.invalid && dayInput.touched" class="error">
+        შეიყვანეთ სწორი რიცხვი (1-31).
+      </div>
+
+      <input
+        [(ngModel)]="dateInput.month"
+        type="text"
+        class="cell month"
+        (focus)="selectAll($event)"
+        (click)="selectAll($event)"
+        (blur)="validateDay(dayInput); updateDate('day')"
+      />
+
+      <input
+        [(ngModel)]="dateInput.year"
+        type="text"
+        class="cell year"
+        (focus)="selectAll($event)"
+        (click)="selectAll($event)"
+        (blur)="validateDay(dayInput); updateDate('day')"
+      />
+    </div>
 
     <div class="toggle" (click)="toggleCalendar($event)">
       <svg
@@ -34,7 +62,10 @@
         'calendar-expanded': !isFolded
       }"
     >
-      <app-calendar (closeCalendarOutput)="isFolded = true"></app-calendar>
+      <app-calendar
+        (dateFromCalendarOutput)="getDatesFromCAlendar($event)"
+        (closeCalendarOutput)="isFolded = true"
+      ></app-calendar>
     </div>
 
     <p>არჩეული თარიღი:</p>
