--- a/src/app/modules/date-piker-ge/components/calendar/calendar.component.scss
+++ b/src/app/modules/date-piker-ge/components/calendar/calendar.component.scss
@@ -1,17 +1,58 @@
 .flex-wrapper {
-  position: relative;
+  --clr-boxShadow1: rgb(139, 138, 138);
+  --clr-background1: rgba(179, 191, 247, 0.687);
+
+  --clr-background: rgb(255, 255, 255);
+
+  --pbsR: 3px 3px 2px var(--clr-boxShadow1);
+
+  --pbsL: -3px 3px 2px var(--clr-boxShadow1);
+
+  --pbs1: 5px 5px 3px var(--clr-boxShadow1), -5px -5px 3px var(--clr-boxShadow1);
+  --pbs2: 5px 5px 3px var(--clr-boxShadow1) inset,
+    -5px -5px 3px var(--clr-boxShadow1) inset;
+
+  // position: relative;
 
   flex-direction: column;
 
-  gap: 0.5rem;
+  justify-content: space-between;
+
   padding: 0.5rem;
+
+  background-color: var(--clr-background);
+
+  border-radius: 1rem;
+
+  font-family: "Times New Roman", Times, serif;
+
+  width: 100%;
+  height: 100%;
 }
 
 .line {
   width: 100%;
-  padding: 0;
+  padding: 0.2rem;
   flex-direction: row;
   justify-content: space-between;
+
+  background-color: var(--clr-background1);
+}
+
+.line-1,
+.line-2,
+.line-3 {
+  height: 50px;
+}
+
+.line-1,
+.line-2,
+.line-4 {
+  position: relative;
+}
+
+.line-4 {
+  height: 230px;
 }
 
 .line-1__right {
@@ -21,16 +62,30 @@
 }
 
 .btn {
-  background-color: white;
+  // position: relative;
+
+  background-color: var(--clr-boxShadow1);
   border-radius: 1rem;
+
+  color: var(--clr-background);
   font-size: 1rem;
   padding: 0.3em 0.5em;
+}
+
+.btn:hover {
+  transform: none;
 }
 
 .pad {
   position: absolute;
 
-  width: calc(100% - 1rem);
+  width: 100%;
+
+  top: 100%;
+
+  left: 0;
+
+  padding: 0.5rem;
 
   background-color: white;
 
@@ -41,20 +96,11 @@
   z-index: 9999;
 }
 
-.year-pad {
-  top: 14%;
-  left: 0.5rem;
-
-  height: calc(85.5% - 0.5em);
-}
-
 .month-pad {
-  top: 26%;
-  left: 0.5rem;
-  height: calc(71% - 0.5em);
+  height: 300px;
 }
 
-.year-grid {
+.year-pad {
   display: grid;
 
   gap: 2px;
@@ -67,10 +113,10 @@
     ". . . .";
 
   padding: 0.3em;
-  height: 100%;
+  height: 355px;
 }
 
-.month-grid {
+.month-pad {
   display: grid;
 
   gap: 2px;
@@ -82,11 +128,11 @@
     ". . .";
 
   padding: 0.3em;
-  height: 100%;
+  // height: 100%;
 }
 
-.year-grid__year,
-.month-grid__month {
+.year-pad__year,
+.month-pad__month {
   display: flex;
 
   align-items: center;
@@ -97,8 +143,8 @@
   border-radius: 0.4rem;
 }
 
-.year-grid__year:hover,
-.month-grid__month:hover {
+.year-pad__year:hover,
+.month-pad__month:hover {
   cursor: pointer;
 
   background-color: white;
@@ -108,13 +154,37 @@
   scale: 1.4;
 }
 
-.year-back:hover,
-.year-forward:hover {
-  cursor: pointer;
-  background-color: white;
+.back-forward {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 0.3em;
+
+  padding: 0.2em;
 }
 
-.dayNames {
+.back {
+  box-shadow: var(--pbsL);
+  border-top: 1px solid var(--clr-boxShadow1);
+  border-right: 1px solid var(--clr-boxShadow1);
+}
+
+.forward {
+  box-shadow: var(--pbsR);
+
+  border-top: 1px solid var(--clr-boxShadow1);
+  border-left: 1px solid var(--clr-boxShadow1);
+}
+
+.back-forward:hover {
+  cursor: pointer;
+  background-color: white;
+
+  box-shadow: var(--pbs);
+}
+
+.line-3 {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -123,8 +193,21 @@
 }
 
 .day {
-  border-radius: 50%;
+  display: flex;
+
+  width: 100%;
+  height: 80%;
+  border-radius: 0.5em;
   flex: 1;
+
+  align-items: center;
+  justify-content: center;
+
+  background-color: var(--clr-background);
+}
+
+.brown {
+  color: brown;
 }
 
 .monthDays {
@@ -132,7 +215,7 @@
 
   display: flex;
   width: 100%;
-  height: 250px;
+  height: 100%;
 
   border-radius: 1rem;
 
@@ -151,21 +234,36 @@
   justify-content: center;
 }
 
-.selectedDay {
-  border-radius: 50%;
-  background-color: white;
-  outline: 1px solid red;
-}
+.mDay {
+  display: flex;
 
-// .cleanCell {
-//   color: transparent;
-// }
+  align-items: center;
+  justify-content: center;
+
+  background-color: var(--clr-background);
+
+  width: 100%;
+  height: 100%;
+
+  border-radius: 0.5em;
+}
 
 .mDay:hover {
   cursor: pointer;
   border-radius: 50%;
-  background-color: white;
+  background-color: var(--clr-boxShadow1);
+  color: var(--clr-background);
 
   scale: 1.5;
   font-weight: var(--fw-bold);
+}
+
+.selectedDay {
+  border-radius: 50%;
+  outline: 1px solid red;
+
+  scale: 1.2;
+
+  background-color: var(--clr-boxShadow1);
+  color: var(--clr-background);
 }
