--- a/src/app/modules/date-piker-ge/components/date-picker-ge/date-picker-ge.component.scss
+++ b/src/app/modules/date-piker-ge/components/date-picker-ge/date-picker-ge.component.scss
@@ -1,28 +1,44 @@
 .picker {
+  --clr-boxShadow1: rgb(139, 138, 138);
+  --clr-background1: rgb(236, 239, 253);
+
+  --clr-background: rgb(255, 255, 255);
+
+  --pbs1: 5px 5px 3px var(--clr-boxShadow1), -5px -5px 3px var(--clr-boxShadow1);
+  --pbs2: 5px 5px 3px var(--clr-boxShadow1) inset,
+    -5px -5px 3px var(--clr-boxShadow1) inset;
+
   display: flex;
 
-  // flex-direction: column;
-
   justify-content: center;
+
+  background-color: var(--clr-background1);
 
   margin: 1rem auto;
   padding: 1rem;
 
   width: 250px;
-  height: auto;
 
-  border: 1px solid black;
+  font-family: serif;
+  font-size: var(--fs-body);
+
+  border-radius: 1rem;
+  box-shadow: var(--pbs1);
+}
+
+.picker:hover {
+  box-shadow: var(--pbs2);
 }
 
 input {
   text-align: center;
   font-size: var(--fs-body);
+  font-family: "Courier New", Courier, monospace;
 }
 
 input:hover,
 input:focus {
-  outline: 1px solid black;
-  outline-offset: 1px;
+  outline: none;
 }
 
 .input {
@@ -43,8 +59,8 @@ input:focus {
   width: 200px;
   padding: 0.3rem;
 
-  background-color: rgb(202, 197, 197);
-  opacity: 0.8;
+  background-color: var(--clr-boxShadow1);
+  // opacity: 0.8;
 
   border: 1px solid black;
   border-radius: 10px;
@@ -79,11 +95,15 @@ input:focus {
   top: 40px;
   left: -13%;
 
-  width: 126%;
+  width: 252px;
+  height: 420px;
+
+  // background-color: var(--clr-boxShadow1);
+  border: 1px solid black;
 
   border-radius: 1rem;
 
-  background-color: rgb(202, 197, 197);
+  overflow: hidden;
 }
 
 .calendar-folded {
