--- a/src/app/modules/ticktock/components/ticktock/ticktock.component.html
+++ b/src/app/modules/ticktock/components/ticktock/ticktock.component.html
@@ -2,10 +2,14 @@
   <div class="ticktock">
     @for (row of rows; track $index; let i = $index) { @for (column of columns;
     track $index; let j = $index) {
-    <div class="item flex-wrapper" (click)="onCellClick(row, column)">
+    <div
+      class="item flex-wrapper"
+      id="wr{{ row + column }}"
+      (click)="startGame(row, column)"
+    >
       {{ row + column }}
       <div>
-        <app-chose [idInp]="row + column"></app-chose>
+        <app-chose [idInp]="row + column" (closeChose)="getClose()"></app-chose>
       </div>
     </div>
     } }
