--- a/src/app/modules/ticktock/components/chose/chose.component.scss
+++ b/src/app/modules/ticktock/components/chose/chose.component.scss
@@ -4,10 +4,10 @@
   width: 80%;
   height: 65%;
 
-  padding: 0.3rem;
+  padding: 0.3rem 0.1rem;
 
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
 
   position: absolute;
 
@@ -19,4 +19,31 @@
 
   border-radius: 0.5rem;
   font-size: 1.5rem;
+}
+
+.cell {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  border-radius: 0.5rem;
+}
+
+.cell:hover {
+  cursor: grab;
+  background-color: var(--clr-light);
+  scale: 1.2;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.first {
+  border-right: 1px solid #000;
+  justify-content: flex-start;
+}
+
+.second {
+  border-left: 1px solid #000;
+  justify-content: flex-end;
 }
