--- a/src/app/modules/ticktock/components/chose/chose.component.scss
+++ b/src/app/modules/ticktock/components/chose/chose.component.scss
@@ -15,7 +15,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  background-color: wheat;
+  background-color: rgb(197, 241, 173);
 
   border-radius: 0.5rem;
   font-size: 1.5rem;
@@ -32,7 +32,7 @@
 .cell:hover {
   cursor: grab;
   background-color: var(--clr-light);
-  scale: 1.2;
+  scale: 1.3;
 
   justify-content: center;
   align-items: center;
