--- a/src/app/modules/ticktock/components/ticktock/ticktock.component.html
+++ b/src/app/modules/ticktock/components/ticktock/ticktock.component.html
@@ -1,17 +1,24 @@
 <div class="flex-wrapper">
-  <div class="ticktock">
-    @for (row of rows; track $index; let i = $index) { @for (column of columns;
-    track $index; let j = $index) {
+  <div class="ticktock" id="pad">
+    @for (row of dimension; track $index; let i = $index) { @for (column of
+    dimension; track $index; let j = $index) {
     <div
       class="item flex-wrapper"
       id="wr{{ row + column }}"
-      (click)="startGame(row, column)"
+      (click)="makeMove(row, column)"
     >
-      {{ row + column }}
+      <div class="flex-wrapper" id="wr{{ row + column }}svg"></div>
       <div>
-        <app-chose [idInp]="row + column" (closeChose)="getClose()"></app-chose>
+        <app-chose
+          [idInp]="row + column"
+          (playerOutput)="getPlayerInfo($event)"
+        ></app-chose>
       </div>
     </div>
     } }
   </div>
+</div>
+
+<div class="flex-erapper">
+  <div class="btn" (click)="startGame()">start</div>
 </div>
